# mower_gui_ros2

./: .gitignore
yxrobot_gui/: CMakeLists.txt
yxrobot_gui/docs/: architecture.md
yxrobot_gui/src/app/: main.cpp
yxrobot_gui/src/channel/: channel_manager.cpp  channel_manager.h  virtual_channel.h
yxrobot_gui/src/channel/network/: CMakeLists.txt  channel_symbol.cpp  network_channel.cpp  network_channel.h  telemetry_protocol.h
yxrobot_gui/src/channel/network/proto/base_proto/: common.proto  geometry.proto  map.proto
yxrobot_gui/src/channel/network/proto/sensor_proto/: smart_sensors.proto
yxrobot_gui/src/channel/ros1/: CMakeLists.txt  channel_symbol.cpp  qnode.cpp  qnode.h
yxrobot_gui/src/channel/ros2/: CMakeLists.txt  channel_symbol.cpp  rclcomm.cpp  rclcomm.h
yxrobot_gui/src/common/: common.h  map_coordinate_transformer.h  point.h
yxrobot_gui/src/mainwindow/: mainwindow.cpp  mainwindow.h
yxrobot_gui/src/mainwindow/map_panel/: costmap_color_policy.h  costmap_layerItem.cpp  costmap_layerItem.h  grid_layeritem.cpp  grid_layeritem.h  laser_layeritem.cpp  laser_layeritem.h  map_graphicsview.cpp  map_graphicsview.h  map_layerItem_virtual.cpp  map_layer_registry.cpp  map_layer_registry.h  map_layer_runtime.cpp  map_layer_runtime.h  map_layeritem_virtual.h  mapdisplay_factory.cpp  mapdisplay_factory.h  occmap_layerItem.cpp  occmap_layerItem.h  path_layerItem.cpp  path_layerItem.h  robotpose_layerItem.cpp  robotpose_layerItem.h
yxrobot_gui/src/mainwindow/map_panel/core/: editable_zone_model.cpp  editable_zone_model.h  map_layerItem_virtual.cpp  map_layer_registry.cpp  map_layer_registry.h  map_layer_runtime.cpp  map_layer_runtime.h  map_layeritem_virtual.h  mapdisplay_factory.cpp  mapdisplay_factory.h  pnc_task_model.cpp  pnc_task_model.h
yxrobot_gui/src/mainwindow/map_panel/layers/: costmap_layerItem.cpp  costmap_layerItem.h  editable_zone_layeritem.cpp  editable_zone_layeritem.h  grid_layeritem.cpp  grid_layeritem.h  laser_layeritem.cpp  laser_layeritem.h  occmap_layerItem.cpp  occmap_layerItem.h  path_layerItem.cpp  path_layerItem.h  robotpose_layerItem.cpp  robotpose_layerItem.h
yxrobot_gui/src/mainwindow/map_panel/view/: map_graphicsview.cpp  map_graphicsview.h  map_overlay_widget.cpp  map_overlay_widget.h
yxrobot_gui/src/mainwindow/ui/: mainwindow.ui
yxrobot_gui/tests/: test_editable_zone_model.cpp  test_pnc_task_model.cpp  test_robotpose_layeritem.cpp
